tests/reference/asr-infer_walrus_error_01-87be84d.stderr
warning: `:=` is an experimental LFortran extension (subject to change); use `--infer` to suppress this warning
 --> tests/errors/infer_walrus_error_01.f90:4:5
  |
4 |     x := 5
  |     ^^^^^^ LFortran extension

semantic error: Variable 'x' is already declared; use `=` for assignment to existing variables
 --> tests/errors/infer_walrus_error_01.f90:4:5
  |
4 |     x := 5
  |     ^ already declared
